--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +36,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.4",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.2.2"
   }
 }
